changed styling to prevent stretching on bogger screens.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 3rem;
   background-color: aqua;
 }
 
@@ -30,7 +30,7 @@ header{
 
 /* styling for the meme-form component */
 .meme-form{
-  padding: 10%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,9 +54,10 @@ header{
   background: blueviolet;
   color: white;
   border: none;
-  padding: 2% 30%;
-  margin-top: 10%;
+  padding: 20px 50px;
+  margin-top: 20px;
   font-size: 24px;
+  font-weight: 900;
   border-radius: 10px;
 }
 
